# msomeip

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  component.yaml  msomeip
examples/: CMakeLists.txt  event_example.cpp  example_discovery.cpp  example_event.cpp  example_field.cpp  example_method.cpp  service_example.cpp
include/msomeip/: application.h  runtime.h  service_base.h  shm_agent.h  someip.h  types.h
include/msomeip/message/: message.h  payload.h
include/msomeip/sd/: service_discovery.h  service_entry.h
include/msomeip/tp/: tp_reassembler.h  tp_segmenter.h  tp_types.h
include/msomeip/transport/: tcp_transport.h  udp_transport.h
src/: application.cpp  runtime.cpp  service_base.cpp  shm_agent.cpp
src/message/: message.cpp  payload.cpp
src/sd/: service_discovery.cpp  service_entry.cpp
src/tp/: tp_reassembler.cpp  tp_segmenter.cpp
src/transport/: tcp_transport.cpp  udp_transport.cpp
tests/: CMakeLists.txt  test_message.cpp  test_payload.cpp  test_service_discovery.cpp
